# notebook

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  init.sh  pyproject.toml  ssh_config
data/: Ct_SAR.csv  quarantine.csv
notebook/: Ct-dynamics.ipynb  HeteroSIRS.ipynb  Julia_sandbox.ipynb  P-house-pricing.ipynb  PIDwithFriction.ipynb  Python_sandbox.ipynb  R-causal-graph.ipynb  R-pattern-matching.ipynb  R-seasonal-forcing-and-immunity.ipynb  R-seasonal-forcing-japan.ipynb  R_Japan_Rt.ipynb  SIR-closed-form.ipynb  SIRS-reinf-and-birth.ipynb  SIRS_frequent_reinfection_gives_better_protection.ipynb  SeasonalForcing.ipynb  Untitled.ipynb  Untitled1.ipynb  deaths_detail_cumulative_weekly.csv  flu-Re-monthly.csv  imhere.csv  japan-birth-rate-by-age-of-mother.xls  japan-flu-per-sentinel-weekly.csv  japan-flu-total-per-season.csv  jax-mnist-optims.ipynb  newly_confirmed_cases_detail_weekly.csv  newly_confirmed_cases_detail_weekly_old.csv  severe_cases_detail_weekly.csv  wpd_datasets.csv
notebook/VaccineEfficacyOnPopulation/: mobility.csv  utils.stan  vaccine-efficacy-on-population.ipynb  vaccine_daily.csv
